src/objects/Community_Group_Membership__c.object
<CustomObject>
    <fields>
        <fullName>Group_Control_SF_ID__c</fullName>
        <description>Represents the 18 digit Salesforce Unique ID of the related Group Control record.</description>
        <formula>Group_Control__r.Group_Control_SF_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit Salesforce Unique ID of the related Group Control record.</inlineHelpText>
        <label>Group Control SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Control__c</fullName>
        <description>Represents the Group the Group Membership record is related to.</description>
        <inlineHelpText>Represents the Group the Group Membership record is related to.</inlineHelpText>
        <label>Group Control</label>
        <referenceTo>Community_Group_Control__c</referenceTo>
        <relationshipLabel>Group Managers</relationshipLabel>
        <relationshipName>Community_Group_Managers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Membership_SF_ID__c</fullName>
        <description>Represents the 18 digit Salesforce Unique ID.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit Salesforce Unique ID.</inlineHelpText>
        <label>Group Membership SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Membership_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the User that has access to the Group Control record in the Community.</description>
        <inlineHelpText>This is the User that has access to the Group Control record in the Community.</inlineHelpText>
        <label>Group Membership User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Membershps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_Role__c</fullName>
        <description>Defines the role of the group manager for a chatter group.  There may only be one Owner.  All other values are treated as a group Manager in Chatter.</description>
        <label>Manager Role</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Group Manager</label>
    <nameField>
        <displayFormat>CGM.{yy}{mm}{0}</displayFormat>
        <label>Group Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Group Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>